--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -33,3 +33,4 @@ add_definitions(-DDOUBLE_PRECISION=${DOUBLE_PRECISION})
 
 add_subdirectory(game_of_life)
 add_subdirectory(mandelbrot)
+add_subdirectory(nbody)
